# exploring_db

taks5/: CMakeLists.txt  db_customer.cpp  db_customer.h  main.cpp
task2/: 1.txt
